# DH

./: .gitmodules  README.md  main.py  pyproject.toml
agda-signature-extractor/: README.md  agda-signature-extractor.cabal  package.yaml  stack.yaml
agda-signature-extractor/app/: Main.hs
signatures/: IO.jsonl  Induction.jsonl  Level.jsonl  Size.jsonl
signatures/Algebra/: Bundles.jsonl  Core.jsonl  Definitions.jsonl  Morphism.jsonl  Structures.jsonl
signatures/Axiom/: DoubleNegationElimination.jsonl  ExcludedMiddle.jsonl  UniquenessOfIdentityProofs.jsonl
signatures/Data/: Container.jsonl  DifferenceList.jsonl  DifferenceNat.jsonl  DifferenceVec.jsonl  Digit.jsonl  Empty.jsonl  Fin.jsonl  Integer.jsonl  Irrelevant.jsonl  Maybe.jsonl  Product.jsonl  Rational.jsonl  Sum.jsonl  These.jsonl  Trie.jsonl  Universe.jsonl  W.jsonl
signatures/Debug/: Trace.jsonl
signatures/Effect/: Applicative.jsonl  Choice.jsonl  Comonad.jsonl  Empty.jsonl  Foldable.jsonl  Functor.jsonl  Monad.jsonl
signatures/Foreign/: Haskell.jsonl
signatures/Function/: Base.jsonl  Bijection.jsonl  Bundles.jsonl  Consequences.jsonl  Core.jsonl  Definitions.jsonl  Equality.jsonl  Equivalence.jsonl  Injection.jsonl  Inverse.jsonl  LeftInverse.jsonl  Metric.jsonl  Properties.jsonl  Reasoning.jsonl  Strict.jsonl  Structures.jsonl  Surjection.jsonl
signatures/IO/: Base.jsonl  Effectful.jsonl  Finite.jsonl  Handle.jsonl  Infinite.jsonl  Instances.jsonl
signatures/Induction/: Lexicographic.jsonl  WellFounded.jsonl
signatures/Level/: Literals.jsonl
signatures/Reflection/: TCM.jsonl
(+806 files in other folders)
